<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MainActivity">

    <item
        android:id="@+id/action_accessibility_settings"
        android:orderInCategory="100"
        android:title="@string/action_accessibility_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_app_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_draw_over_other_apps_setting"
        android:orderInCategory="100"
        android:title="@string/action_draw_over_other_apps_setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/sample_app_configuration_file"
        android:orderInCategory="100"
        android:title="@string/action_sample_app_configuration_file"
        app:showAsAction="never" />

</menu>
